spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp.clang-tidy.loop-label.out.log
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:1636:7: warning: Added loop label VITIS_LOOP_1211_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1211_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:1636:7: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2610:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2610:5: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2624:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2624:5: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2638:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:2638:5: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:4249:7: warning: Added loop label VITIS_LOOP_1245_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1245_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:4249:7: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6201:2: warning: Added loop label VITIS_LOOP_20_1:   [xilinx-label-all-loops]
 for(int i = 0; i < nnz; ++i){
 ^~~
 VITIS_LOOP_20_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6201:2: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6230:5: warning: Added loop label VITIS_LOOP_49_1:   [xilinx-label-all-loops]
    for(int i = 0; i < BUF_DEPTH; ++i){
    ^~~
    VITIS_LOOP_49_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6230:5: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6234:5: warning: Added loop label VITIS_LOOP_53_2:   [xilinx-label-all-loops]
    for(int i = 0; i < BUF_DEPTH; ++i){
    ^~~
    VITIS_LOOP_53_2: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6234:5: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6237:9: warning: Added loop label VITIS_LOOP_56_3:   [xilinx-label-all-loops]
        for(int j = 0; j < i; ++i){
        ^~~
        VITIS_LOOP_56_3: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6237:9: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6245:13: warning: Added loop label VITIS_LOOP_64_4:   [xilinx-label-all-loops]
            for(int j = 0; j < K; ++j){
            ^~~
            VITIS_LOOP_64_4: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6245:13: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6261:2: warning: Added loop label VITIS_LOOP_80_1:   [xilinx-label-all-loops]
 for(int i = 0; i < len; ++i){
 ^~~
 VITIS_LOOP_80_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6261:2: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6274:2: warning: Added loop label VITIS_LOOP_93_1:   [xilinx-label-all-loops]
 for(int i = 0; i < len; ++i){
 ^~~
 VITIS_LOOP_93_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6274:2: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6288:50: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=dense_buf type=ram_2p impl=bram
                                                 ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6289:48: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=out_buf type=ram_2p impl=bram
                                               ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6297:2: warning: Added loop label VITIS_LOOP_116_1:   [xilinx-label-all-loops]
 for(int i = 0; i < BUF_DEPTH; ++i){
 ^~~
 VITIS_LOOP_116_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6297:2: note: FIX-IT applied suggested code changes
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6352:51: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=Dense_Buf0 type=ram_2p impl=bram
                                                  ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6353:51: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=Dense_Buf1 type=ram_2p impl=bram
                                                  ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6359:49: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=Out_Buf0 type=ram_2p impl=bram
                                                ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6360:49: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=Out_Buf1 type=ram_2p impl=bram
                                                ^
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6368:5: warning: Added loop label VITIS_LOOP_183_1:   [xilinx-label-all-loops]
    for (int batch = 0; batch < total_batches; ++batch) {
    ^~~
    VITIS_LOOP_183_1: 
/home/shuxuan/SDMA/spmm_prj/sol1/.autopilot/db/spmm_device_fpga.pp.0.cpp:6368:5: note: FIX-IT applied suggested code changes
